Fix overlapping issue of profile menu, VideoDetails component ,and Search component

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -138,6 +138,7 @@ input::placeholder{
    padding-top: 10px;
    right: 33px;
    top: 55px;
+   z-index: 101;
 }
 
 .profile-drop-down-sub-container{
